--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -1,6 +1,15 @@
 //---------------------
-// Section Scene
+// Elementos do Cenário
 //---------------------
+
+@mixin animation-objects {
+    content: '';
+    display: block;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 
 .game__quote {
     & {
@@ -88,19 +97,14 @@
 
 
 //-------------------------
-// Steps e Objetos da Cena
+// Objetos das Cenas
 //-------------------------
 
 .game__scenario.--start .game__truck {
+    
     & {
-        left: 6vw; 
+        left: 1vw; 
         z-index: 1;
-    }
-
-    &.--guep {
-        & {
-            left: 2vw;
-        }
     }
 }
 
@@ -130,37 +134,35 @@
 .game__scenario.--step1 {
     
     .game__truck {
-        left: 26vw;
+        
+        & {
+            left: 23vw;
+        }
+
+        @include tablet-l {
+            left: 32vw;
+        }
+
+        @media  screen and (min-width: 1366px) {
+            left: 19vw;
+        }
+
+        @media  screen and (min-width: 1920px) {
+            left: 23vw;
+        }
+
         z-index: 1;
 
-        &.--guep {
-            left: 22vw;
-        }
-    }
-
-    .game__truck {
-        
-        &.--guep {
-            
-            &:after {
-                bottom: 2.8vh;
-                background-image: url('../../assets/img/hand-cpf-guep.png');
-            }
-        }
-
+        // Ṕesquisa
         &:after {
-            content: '';
-            display: block;
-            position: absolute;
-            background-image: url('../../assets/img/hand-cpf.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-            bottom: 4.8vh;
+            @include animation-objects;
+            background-image: url('../../assets/img/pesquisa.png');
+            bottom: 1.8vh;
             left: 9vw;
-            animation: interation 3s ease-in;
+            animation: pesquisa 3s ease-in;
             animation-fill-mode: forwards;
-            
-            @keyframes interation {
+
+            @keyframes pesquisa {
                 
                 from {
                     width: 0;
@@ -173,58 +175,146 @@
                 }
             }
         }
+
+        // Score 
+        &:before {
+            @include animation-objects;
+            background-image: url('../../assets/img/score-icon.png');
+            bottom: 20vh;
+            left: 3vw;
+            width: 5vw;
+            height: 5vw;
+
+            animation: score 6s ease-in;
+            animation-fill-mode: forwards;
+            
+            @keyframes score {
+                from,
+                60%,
+                75%,
+                90%,
+                to {
+                  -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+                  animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+                }
+              
+                0% {
+                  opacity: 0;
+                  -webkit-transform: translate3d(0, -3000px, 0);
+                  transform: translate3d(0, -3000px, 0);
+                }
+
+                to {
+                  -webkit-transform: translate3d(0, 0, 0);
+                  transform: translate3d(0, 0, 0);
+                }
+            }
+            
+            
+        }
+    }
+
+    .game__truck__layer {
+
+        //Cronometro
+        &:after {
+            @include animation-objects;
+            background-image: url('../../assets/img/cronometro.png');
+            
+            bottom: 8vw;
+            left: 14vw;
+
+            animation: cronometro 3s ease-in;
+            animation-fill-mode: forwards;
+            
+            @keyframes cronometro {
+                from {
+                    width: 0;
+                    height: 0;
+                }
+
+                to {
+                    width: 2vw;
+                    height: 2vw;
+                }
+            }
+            
+        }
     }
 }
 
 .game__scenario.--step2 {
-
+    
     .game__truck {
+        
         & {
-            left: 26vw;
-            z-index: 1;
+            left: 53vw;
         }
+
+        @include tablet-l {
+            left: 62vw;
+        }
+
+        @media  screen and (min-width: 1366px) {
+            left: 45vw;
+        }
+
+        @media  screen and (min-width: 1920px) {
+            left: 53vw;
+        }
+
+        z-index: 1;
 
         &:after {
-            content: '';
-            display: block;
-            position: absolute;
-            background-image: url('../../assets/img/hand-cpf.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-            bottom: 4.8vh;
+            @include animation-objects;
+            background-image: url('../../assets/img/hand-check-phone.png');
+            bottom: 1.8vh;
             left: 9vw;
-            width: 5vw;
-            height: 8vw;
+            animation: phone-check 6s ease-out;
+            
+            @keyframes phone-check {
+                
+                from {
+                    width: 5vw;
+                    height: 8vw;
+                }
+                
+                to {
+                    width: 0;
+                    height: 0;
+                }
+            }
         }
 
-        &.--guep {
-            & {
-                left: 52vw;
-            }
+        &:before {
+            @include animation-objects;
+            background-image: url('../../assets/img/sinistro.png');
+            bottom: 18vw;
+            width: 5vw;
+            height: 5vw;
+            left: 2.4vw;
+            animation-fill-mode: forwards;
+            animation: averb 8s;
+            
+            @keyframes averb {
+                from,
+                60%,
+                75%,
+                90%,
+                to {
+                  -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+                  animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+                }
+              
+                0% {
+                  opacity: 0;
+                  -webkit-transform: translate3d(0, -3000px, 0);
+                  transform: translate3d(0, -3000px, 0);
+                }
 
-            &:after {
-                content: '';
-                display: block;
-                position: absolute;
-                bottom: 2.8vh;
-                background-image: url('../../assets/img/phone.png');
-                background-repeat: no-repeat;
-                background-size: cover;
-                left: 9vw;
-                animation: interation 3s ease-in;
-                animation-fill-mode: forwards;
-                
-                @keyframes interation {
-                    
-                    from {
-                        width: 0;
-                        height: 0;
-                    }
-                    
-                    to {
-                        width: 5vw;
-                        height: 8vw;
-                    }
+                to {
+                  -webkit-transform: translate3d(0, 0, 0);
+                  transform: translate3d(0, 0, 0);
                 }
             }
         }
@@ -232,72 +322,56 @@
 }
 
 .game__scenario.--step3 {
-
+    
     .game__truck {
+        
         & {
-            left: 26vw;
-            z-index: 1;
+            left: 53vw;
         }
 
-        &:after {
-            content: '';
-            display: block;
-            position: absolute;
-            background-image: url('../../assets/img/hand-cpf.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-            bottom: 4.8vh;
-            left: 9vw;
-            width: 5vw;
-            height: 8vw;
+        @include tablet-l {
+            left: 62vw;
         }
 
-        &.--guep {
-            & {
-                left: 52vw;
-            }
+        @media  screen and (min-width: 1366px) {
+            left: 45vw;
+        }
 
-            &:after,
-            &:before {
-                content: '';
-                display: block;
-                position: absolute;
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
+        @media  screen and (min-width: 1920px) {
+            left: 53vw;
+        }
 
-            &:after {
-                left: 8vw;
-                width: 5vw;
-                height: 8vw;
-                bottom: 2.8vh;
-                left: 9vw;
-                background-image: url('../../assets/img/phone.png');
-            }
+        z-index: 1;
+
+        &:before {
+            @include animation-objects;
+            background-image: url('../../assets/img/sinistro.png');
+            animation-fill-mode: forwards;
+            animation: averb-leave 5s;
             
-            &:before {
-               
-                left: 7.4vw;
-                bottom: 15vh;
-                background-image: url('../../assets/img/cte-nfe-mdfe.png');
-                animation: apps 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-                animation-fill-mode: forwards;
+            @keyframes averb-leave {
                 
-                @keyframes apps {
-                    0% {
-                        width: 0;
-                        height: 0;
-                    }
-
-                    100% {
-                        width: 11vw;
-                        height: 13vh;
-                    }
+                0% {
+                    bottom: 18vw;
+                    left: 2.4vw;
+                    width: 5vw;
+                    height: 5vw;
+                    opacity: 1;
                 }
+
+                100% {
+                    width: 0;
+                    height: 0;
+                    bottom: 24vh;
+                    left: 36.4vw;
+                }
+
             }
         }
     }
 }
+
+
 
 .game__scenario.--step4 {
 
