--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -850,10 +850,10 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("../../assets/img/gr.png");
-  animation: placa-gr 6s ease-in;
+  animation: placa-gr 3s ease-in;
   animation-fill-mode: forwards;
-  bottom: 25vw;
-  left: 33.4vw;
+  bottom: 28vw;
+  left: 37.4vw;
 }
 @keyframes placa-gr {
   from {
@@ -862,7 +862,7 @@ p {
   }
   to {
     width: 4vw;
-    height: 5vw;
+    height: 6vw;
   }
   from,
                 60%,
@@ -1441,6 +1441,28 @@ p {
   }
 }
 /* line 1265, ../../sass/blocks/_scene.scss */
+.game__scenario.--step9 .game__truck__layer:after {
+  content: '';
+  display: block;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../../assets/img/nfe.png");
+  animation: nota-fiscal 2s ease-in;
+  animation-fill-mode: forwards;
+  bottom: 5vw;
+}
+@keyframes nota-fiscal {
+  from {
+    width: 0;
+    height: 0;
+  }
+  to {
+    height: 5vw;
+    width: 5vw;
+  }
+}
+/* line 1287, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck__layer2:after {
   content: '';
   display: block;
@@ -1479,7 +1501,7 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 1305, ../../sass/blocks/_scene.scss */
+/* line 1327, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck__layer2::before {
   content: '';
   display: block;
@@ -1501,132 +1523,71 @@ p {
     height: 16vw;
   }
 }
-/* line 1333, ../../sass/blocks/_scene.scss */
+/* line 1359, ../../sass/blocks/_scene.scss */
 .game__scenario.--step10 .game__scene,
 .game__scenario.--step10 .game__mountains {
-  left: -219vw;
+  left: -274vw;
 }
 @media (min-width: 910px) {
-  /* line 1330, ../../sass/blocks/_scene.scss */
+  /* line 1356, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__scene,
   .game__scenario.--step10 .game__mountains {
-    left: -310vw;
+    left: -390vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1330, ../../sass/blocks/_scene.scss */
+  /* line 1356, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__scene,
   .game__scenario.--step10 .game__mountains {
-    left: -180vw;
+    left: -228vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1330, ../../sass/blocks/_scene.scss */
+  /* line 1356, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__scene,
   .game__scenario.--step10 .game__mountains {
-    left: -219vw;
+    left: -274vw;
   }
 }
-/* line 1350, ../../sass/blocks/_scene.scss */
+/* line 1376, ../../sass/blocks/_scene.scss */
 .game__scenario.--step10 .game__truck {
   z-index: 1;
 }
-/* line 1353, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--guep {
-  left: 76vw;
+/* line 1378, ../../sass/blocks/_scene.scss */
+.game__scenario.--step10 .game__truck {
+  left: 72vw;
 }
-/* line 1356, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--guep:after, .game__scenario.--step10 .game__truck.--guep:before {
+@media (min-width: 910px) {
+  /* line 1376, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step10 .game__truck {
+    left: 75vw;
+  }
+}
+@media screen and (min-width: 1366px) {
+  /* line 1376, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step10 .game__truck {
+    left: 72vw;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 1376, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step10 .game__truck {
+    left: 72vw;
+  }
+}
+/* line 1398, ../../sass/blocks/_scene.scss */
+.game__scenario.--step10 .game__truck__layer2:after {
   content: '';
   display: block;
   position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  z-index: 2;
-}
-/* line 1367, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--guep:after {
-  bottom: -2.8vh;
-  left: 0.2vw;
-  background-image: url("../../assets/img/smoke.png");
-  animation: smoke 8s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-@keyframes smoke {
-  from {
-    opacity: 0;
-    height: 0;
-    width: 0;
-  }
-  to {
-    opacity: 1;
-    height: 3vh;
-    width: 3vw;
-  }
-}
-/* line 1388, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--guep:before {
-  left: 8vw;
-  width: 5vw;
-  height: 8vw;
-  bottom: 2.8vh;
-  left: 9vw;
+  background-image: url("../../assets/img/carga.png");
   z-index: -1;
-  background-image: url("../../assets/img/hand-check-phone.png");
-  animation: interation 3s ease-in;
+  animation: carga-transporte 5s ease-in;
   animation-fill-mode: forwards;
 }
-@keyframes interation {
-  from {
-    width: 0;
-    height: 0;
-  }
-  to {
-    width: 5vw;
-    height: 8vw;
-  }
-}
-/* line 1414, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--concorrente {
-  left: 75vw;
-}
-/* line 1417, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--concorrente:after, .game__scenario.--step10 .game__truck.--concorrente:before {
-  content: '';
-  display: block;
-  position: absolute;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  z-index: 2;
-}
-/* line 1428, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--concorrente:after {
-  bottom: -2.8vh;
-  left: 0.2vw;
-  background-image: url("../../assets/img/smoke.png");
-  animation: smoke 8s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-@keyframes smoke {
-  from {
-    opacity: 0;
-    height: 0;
-    width: 0;
-  }
-  to {
-    opacity: 1;
-    height: 3vh;
-    width: 3vw;
-  }
-}
-/* line 1449, ../../sass/blocks/_scene.scss */
-.game__scenario.--step10 .game__truck.--concorrente:before {
-  background-image: url("../../assets/img/caixas.png");
-  z-index: 1;
-  animation: caixas 5s ease-in;
-  animation-fill-mode: forwards;
-}
-@keyframes caixas {
+@keyframes carga-transporte {
   from {
     height: 0;
     width: 0;
@@ -1640,137 +1601,97 @@ p {
     height: 6vh;
   }
 }
-/* line 1477, ../../sass/blocks/_scene.scss */
+/* line 1431, ../../sass/blocks/_scene.scss */
+.game__scenario.--step11 .game__scene,
+.game__scenario.--step11 .game__mountains {
+  left: -293vw;
+}
+@media (min-width: 910px) {
+  /* line 1428, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step11 .game__scene,
+  .game__scenario.--step11 .game__mountains {
+    left: -410vw;
+  }
+}
+@media screen and (min-width: 1366px) {
+  /* line 1428, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step11 .game__scene,
+  .game__scenario.--step11 .game__mountains {
+    left: -237vw;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 1428, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step11 .game__scene,
+  .game__scenario.--step11 .game__mountains {
+    left: -293vw;
+  }
+}
+/* line 1448, ../../sass/blocks/_scene.scss */
 .game__scenario.--step11 .game__truck {
   z-index: 1;
 }
-/* line 1481, ../../sass/blocks/_scene.scss */
-.game__scenario.--step11 .game__truck.--concorrente {
-  left: -12vw;
+/* line 1450, ../../sass/blocks/_scene.scss */
+.game__scenario.--step11 .game__truck {
+  left: 80vw;
 }
-/* line 1485, ../../sass/blocks/_scene.scss */
-.game__scenario.--step11 .game__truck.--guep {
-  left: 46vw;
+@media (min-width: 910px) {
+  /* line 1448, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step11 .game__truck {
+    left: 82vw;
+  }
 }
-/* line 1489, ../../sass/blocks/_scene.scss */
-.game__scenario.--step11 .game__scene,
-.game__scenario.--step11 .game__mountains {
-  left: -4390px;
+@media screen and (min-width: 1366px) {
+  /* line 1448, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step11 .game__truck {
+    left: 82vw;
+  }
 }
-
-/* line 1497, ../../sass/blocks/_scene.scss */
-.game__scenario.--step12 .game__truck {
-  z-index: 1;
+@media screen and (min-width: 1920px) {
+  /* line 1448, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step11 .game__truck {
+    left: 80vw;
+  }
 }
-/* line 1501, ../../sass/blocks/_scene.scss */
-.game__scenario.--step12 .game__truck.--concorrente {
-  left: -12vw;
-}
-/* line 1505, ../../sass/blocks/_scene.scss */
-.game__scenario.--step12 .game__truck.--guep {
-  left: 46vw;
-}
-/* line 1509, ../../sass/blocks/_scene.scss */
-.game__scenario.--step12 .game__scene,
-.game__scenario.--step12 .game__mountains {
-  left: -5630px;
-}
-
-/* line 1517, ../../sass/blocks/_scene.scss */
-.game__scenario.--step13 .game__truck {
-  z-index: 1;
-}
-/* line 1521, ../../sass/blocks/_scene.scss */
-.game__scenario.--step13 .game__truck.--concorrente {
-  left: -12vw;
-}
-/* line 1525, ../../sass/blocks/_scene.scss */
-.game__scenario.--step13 .game__truck.--guep {
-  left: 78vw;
-}
-/* line 1528, ../../sass/blocks/_scene.scss */
-.game__scenario.--step13 .game__truck.--guep:after {
+/* line 1470, ../../sass/blocks/_scene.scss */
+.game__scenario.--step11 .game__truck__layer2:before {
+  content: '';
   display: block;
-  content: ' ';
   position: absolute;
-  width: 6vw;
-  height: 8vw;
-  bottom: 2.8vh;
-  left: 9vw;
-  background-image: url("../../assets/img/hand-signature-guep.png");
-}
-/* line 1541, ../../sass/blocks/_scene.scss */
-.game__scenario.--step13 .game__scene,
-.game__scenario.--step13 .game__mountains {
-  left: -5630px;
-}
-
-/* line 1549, ../../sass/blocks/_scene.scss */
-.game__scenario.--step14 .game__truck {
-  z-index: 1;
-}
-/* line 1553, ../../sass/blocks/_scene.scss */
-.game__scenario.--step14 .game__truck.--concorrente {
-  left: -12vw;
-}
-/* line 1557, ../../sass/blocks/_scene.scss */
-.game__scenario.--step14 .game__truck.--guep {
-  left: 100vw;
-}
-/* line 1561, ../../sass/blocks/_scene.scss */
-.game__scenario.--step14 .game__scene,
-.game__scenario.--step14 .game__mountains {
-  left: -5630px;
-}
-
-/* line 1569, ../../sass/blocks/_scene.scss */
-.game__scenario.--step15:after {
-  content: ' ';
-  background-size: cover;
-  background-position: center;
-  background-image: url("../../assets/img/guep-favicon.png");
   background-repeat: no-repeat;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  bottom: 50%;
-  animation: 2s opacity-logo ease-in;
+  background-size: cover;
+  background-image: url("../../assets/img/placa-comprador.png");
+  animation: placa-score 6s ease-in;
   animation-fill-mode: forwards;
+  bottom: 17vw;
 }
-@keyframes opacity-logo {
+@keyframes placa-score {
   from {
-    opacity: 0;
-    height: 0;
     width: 0;
+    height: 0;
   }
   to {
     width: 10vw;
-    height: 16vh;
+    height: 6vw;
+  }
+  from,
+                60%,
+                75%,
+                90%,
+                to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 3000px, 0);
+    transform: translate3d(0, 3000px, 0);
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
-/* line 1598, ../../sass/blocks/_scene.scss */
-.game__scenario.--step15 .game__blur {
-  transition: filter 3s ease-in;
-  filter: blur(100px);
-}
-/* line 1603, ../../sass/blocks/_scene.scss */
-.game__scenario.--step15 .game__truck {
-  z-index: 1;
-}
-/* line 1607, ../../sass/blocks/_scene.scss */
-.game__scenario.--step15 .game__truck.--concorrente {
-  left: -12vw;
-}
-/* line 1611, ../../sass/blocks/_scene.scss */
-.game__scenario.--step15 .game__truck.--guep {
-  left: 100vw;
-}
-/* line 1615, ../../sass/blocks/_scene.scss */
-.game__scenario.--step15 .game__scene,
-.game__scenario.--step15 .game__mountains {
-  left: -5630px;
-}
-
 /* line 6, ../../sass/blocks/_intro.scss */
 .intro {
   display: flex;
